<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lokacar.projet.activities.ActionsChoiceActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnGestionVehicules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBtnGestionVehicules"
        android:layout_margin="10dp"
        android:onClick="choixListeVehiculeOnClick"/>

    <Button
        android:id="@+id/btnGestionClients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBtnGestionClients"
        android:onClick="gestionClientsOnClick"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btnGestionLocations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtBtnGestionLocations"
        android:onClick="gestionLocationsOnClick"
        android:layout_margin="10dp"/>

</LinearLayout>
