<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imgVehicule"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/cdPhotoVehicule"/>

    <LinearLayout
        android:id="@+id/detailsVehiculeLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Marque et Modele du véhicule -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtVehicule"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/txtMarque"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/txtModele"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"/>

        </LinearLayout>

        <!-- Nom et Prénom du client -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtClient"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/txtClientNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"/>

            <TextView
                android:id="@+id/txtClientPrenom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"/>

        </LinearLayout>

        <!-- Date de début de location -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/txtDebut"/>

            <TextView
                android:id="@+id/txtDateDebut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"/>

        </LinearLayout>

        <!-- Date de fin de location -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/txtFin"/>

            <TextView
                android:id="@+id/txtDateFin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>